--- a/GoogleDriveTest/GoogleDriveTest.csproj
+++ b/GoogleDriveTest/GoogleDriveTest.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
